name:          {{$$project.name$$}}
version:       0.1
license:       BSD3
license-file:  LICENSE
cabal-version: >= 1.10
author:        {{$$user.name$$}}
maintainer:    {{$$user.name$$}} <{{$$user.email$$}}>
stability:     experimental
{{homepage:      http://github.com/??github.user??/$$project.name$$/}}
{{bug-reports:   http://github.com/??github.user??/$$project.name$$/issues}}
copyright:     Copyright (C) 2015 {{$$user.name$$}}
synopsis:      {{$$project.name$$}}
description:   {{$$project.name$$}}
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  README.md

{{source-repository head
  type: git
  location: https://github.com/??github.user??/$$project.name$$.git}}

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      base >= 4.4 && < 5

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
      base
    , directory >= 1.0
    , doctest >= 0.9.1
    , filepath
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
